@@ -89,6 +89,8 @@ See docs/WHAT_IS_WEFTEND.md and docs/WHY_RECEIPTS.md for details.
 9) Commit gate (contributors)
 - Before any reusable commit:
   npm run verify:360
+- Optional corridor harness (pass/replay/forced-exception):
+  npm run verify:360:harness
 - This runs a full 360 verification pass (compile, test, proofcheck, deterministic replay, privacy lint, compare smoke).
 - It always writes a verification receipt/report, including PARTIAL/FAIL outcomes:
   - out/verify_360/history/run_<seq>/verify_360_receipt.json
